[package]
name = "extracterr"
version = "0.1.1"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "helper type and traits for passing context through dyn Error trait objects"
repository = "https://github.com/yaahc/extracterr"
documentation = "https://docs.rs/extracterr"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
thiserror = "1.0.18"
backtrace = "0.3.48"
